--- a/inc/customizer/custom-controls/color-group/css/color-group.css
+++ b/inc/customizer/custom-controls/color-group/css/color-group.css
@@ -7,13 +7,90 @@
 }
 
 .woostify-color-group-control .woostify-color-buttons {
-	display: block;
+	display: flex;
 	top: 50%;
 	transform: translateY(-50%);
 	position: absolute;
 	right: 0;
 }
 
+.woostify-color-group-control .woostify-color-buttons .woostify-color-picker-btn {
+	margin-left: 10px;
+	position: relative;
+}
+
+.woostify-color-group-control .woostify-color-buttons .woostify-color-picker-btn .woostify-color-group-btn {
+	display: block;
+	width: 28px;
+	height: 28px;
+}
+
+.woostify-color-group-control .woostify-color-buttons .woostify-color-picker-btn .btn-tooltip {
+	position: absolute;
+	font-size: 12px;
+	background: #363f42;
+	border-radius: 3px;
+	padding: 0 10px;
+	line-height: 26px;
+	font-style: italic;
+	height: 26px;
+	top: -100%;
+	left: 50%;
+	transform: translateX(-50%);
+	color: #fff;
+	opacity: 0;
+	visibility: hidden;
+	transition: opacity 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955), transform 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955), visibility 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955);
+}
+
+.woostify-color-group-control .woostify-color-buttons .woostify-color-picker-btn .btn-tooltip:after {
+	width: 10px;
+	height: 5px;
+	bottom: -4px;
+	left: 0;
+	right: 0;
+	margin: 0 auto;
+	border-left: 5px solid transparent;
+	border-right: 5px solid transparent;
+	border-top: 5px solid #363f42;
+	content: "";
+	position: absolute;
+	box-sizing: border-box;
+}
+
+.woostify-color-group-control .woostify-color-buttons .woostify-color-picker-btn:hover .btn-tooltip {
+	opacity: 1;
+	visibility: visible;
+	transform: translate(-50%, -5px);
+}
+
+.woostify-color-group-control .woostify-color-buttons .woostify-color-picker-btn .woostify-color-group-btn:before,
+.woostify-color-group-control .woostify-color-buttons .woostify-color-picker-btn .woostify-color-group-btn:after {
+	position: absolute;
+	content: "";
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+}
+.woostify-color-group-control .woostify-color-buttons .woostify-color-picker-btn .woostify-color-group-btn:before {
+	background-image: linear-gradient(
+		45deg
+		, #ddd 25%, transparent 0), linear-gradient(
+		-45deg
+		, #ddd 25%, transparent 0), linear-gradient(
+		45deg
+		, transparent 75%, #ddd 0), linear-gradient(
+		-45deg
+		, transparent 75%, #ddd 0);
+	background-size: 10px 10px;
+	background-position: 0 0, 0 5px, 5px -5px, -5px 0;
+}
+.woostify-color-group-control .woostify-color-buttons .woostify-color-picker-btn .woostify-color-group-btn:after{
+	transition: background .3s;
+	background: currentColor;
+}
 .woostify-color-group-control .pcr-app {
 	position: static;
 	width: auto;
@@ -26,22 +103,6 @@
 .woostify-color-group-control .pcr-app.visible {
 	height: auto;
 	display: flex;
-}
-
-.woostify-control-wrap .pickr .pcr-button {
-	border-radius: 50%;
-	border: 1px solid #8c8f94;
-	width: 28px;
-	height: 28px;
-}
-
-.woostify-control-wrap .pickr .pcr-button:focus {
-	box-shadow: none;
-}
-
-.woostify-control-wrap .pickr .pcr-button:before,
-.woostify-control-wrap .pickr .pcr-button:after {
-	border-radius: 50%;
 }
 
 .woostify-control-wrap .pickr .pcr-button:before {
@@ -107,9 +168,14 @@
 	background: #fff !important;
 }
 
+.woostify-color-group-control .pcr-app .pcr-selection .pcr-color-opacity .pcr-slider,
+.woostify-color-group-control .pcr-app .pcr-selection .pcr-color-chooser .pcr-slider {
+	border-radius: 0;
+}
+
 .woostify-color-group-control .pcr-app .pcr-selection .pcr-color-chooser,
 .woostify-color-group-control .pcr-app .pcr-selection .pcr-color-opacity {
-	height: 10px;
+	height: 12px;
 }
 
 .woostify-color-group-control .pcr-app .pcr-selection .pcr-color-preview .pcr-current-color {
