--- a/inc/customizer/custom-controls/section/css/section.css
+++ b/inc/customizer/custom-controls/section/css/section.css
@@ -51,3 +51,10 @@
 .customize-control-title {
 	font-size: 13px;
 }
+.woostify-reset {
+	cursor: pointer;
+	font-size: 11px;
+	width: 20px;
+	height: 20px;
+	line-height: 20px;
+}
