Update new color control for sections in Woocommerce. Add tab layout for header section.

--- a/inc/customizer/custom-controls/conditional/css/condition.css
+++ b/inc/customizer/custom-controls/conditional/css/condition.css
@@ -3,7 +3,7 @@
 	display: none !important;
 }
 
-.customize-control {
+.customize-control:not(.customize-control-woostify-section) {
 	position: relative;
 	margin: 0 0 24px;
 }
