update css erro notice and show sale label

--- a/assets/css/sass/woocommerce/woocommerce.scss
+++ b/assets/css/sass/woocommerce/woocommerce.scss
@@ -775,6 +775,13 @@ $size: 40px;
 	}
 }
 
+.woocommerce-notices-wrapper {
+	.woocommerce-error {
+	    flex-direction: unset;
+		display: flex;
+	}
+}
+
 // Wishlist icon bottom right
 .loop-wrapper-wishlist {
 	position: absolute;
