--- a/inc/customizer/custom-controls/color-group/css/color-group.css
+++ b/inc/customizer/custom-controls/color-group/css/color-group.css
@@ -95,12 +95,13 @@
 	border: 1px solid #ddd;
 }
 .woostify-color-group-control .pcr-app {
-	position: static;
-	width: auto;
-	max-width: unset;
+	position: absolute;
+	width: 100%;
+	max-width: 100%;
 	height: 0;
 	display: none;
 	margin-top: 15px;
+	box-sizing: border-box;
 }
 
 .woostify-color-group-control .pcr-app.visible {
