--- a/inc/customizer/custom-controls/color-group/css/color-group.css
+++ b/inc/customizer/custom-controls/color-group/css/color-group.css
@@ -199,3 +199,50 @@
 .woostify-color-group-control .woostify-reset:hover {
 	transform: scale(1.2);
 }
+.woostify-swatch-tooltip {
+	text-align: center;
+	color: #ffffff;
+	background: #000000;
+	position: absolute;
+	z-index: 100;
+	font-size: 12px;
+	border-radius: 4px;
+	border: 1px solid #000000;
+	left: 50%;
+	transform: translateX(-50%);
+	padding: 0 5px;
+	white-space: nowrap;
+	width: auto;
+	bottom: calc( 100% + 7px);
+}
+.woostify-swatch-tooltip.bottom {
+	top: calc( 100% + 7px);
+	bottom: auto;
+}
+.woostify-swatch-tooltip.bottom::after {
+	position: absolute;
+	width: 0;
+	height: 0;
+	border-left: 4px solid transparent;
+	border-right: 4px solid transparent;
+	border-bottom: 4px solid #000;
+	content: '';
+	top: -5px;
+	right: 50%;
+	transform: translateX(50%);
+}
+.woostify-swatch-tooltip.top::after {
+	position: absolute;
+	width: 0;
+	height: 0;
+	border-left: 4px solid transparent;
+	border-right: 4px solid transparent;
+	border-top: 4px solid #000;
+	content: '';
+	bottom: -5px;
+	right: 50%;
+	transform: translateX(50%);
+}
+.pcr-app .pcr-swatches > button {
+	overflow: unset;
+}
