align dialog search to center

--- a/style.css
+++ b/style.css
@@ -4658,16 +4658,16 @@ article p:last-child {
   }
   100% {
     opacity: 1;
-    -webkit-transform: translate3d(0, -100px, 0);
-    transform: translate3d(0, -100px, 0);
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
   }
 }
 
 @keyframes anim-close {
   0% {
     opacity: 1;
-    -webkit-transform: translate3d(0, -100px, 0);
-    transform: translate3d(0, -100px, 0);
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
   }
   100% {
     opacity: 0;
