--- a/assets/css/sass/base/layout/dialog-search.scss
+++ b/assets/css/sass/base/layout/dialog-search.scss
@@ -126,16 +126,16 @@
 	}
 	100% {
 		opacity: 1;
-		-webkit-transform: translate3d(0, -100px, 0);
-		transform: translate3d(0, -100px, 0);
+		-webkit-transform: translate3d(0, 0, 0);
+		transform: translate3d(0, 0, 0);
 	}
 }
 
 @keyframes anim-close {
 	0% {
 		opacity: 1;
-		-webkit-transform: translate3d(0, -100px, 0);
-		transform: translate3d(0, -100px, 0);
+		-webkit-transform: translate3d(0, 0, 0);
+		transform: translate3d(0, 0, 0);
 	}
 	100% {
 		opacity: 0;
