re-add align-item center for cart button

--- a/assets/css/sass/woocommerce/shop-page.scss
+++ b/assets/css/sass/woocommerce/shop-page.scss
@@ -154,6 +154,16 @@
 	}
 }
 
+.no-transform{
+	.animated-meta{
+		display: inline-flex;
+		flex-direction: column;
+		max-width: 100%;
+		flex-wrap: wrap;
+		align-items: center;
+	}
+}
+
 .product-loop-meta{
 	&.no-transform{
 		.button,
