--- a/style.css
+++ b/style.css
@@ -6925,7 +6925,7 @@ header.elementor-element {
 }
 
 .hide-added-to-cart .product-loop-meta .animated-meta .added {
-  display: block;
+  display: flex;
 }
 
 .hide-added-to-cart .added_to_cart {
@@ -8206,6 +8206,14 @@ header.elementor-element {
 
 .product-loop-meta .added_to_cart:before {
   content: "\e60e";
+}
+
+.no-transform .animated-meta {
+  display: inline-flex;
+  flex-direction: column;
+  max-width: 100%;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 .product-loop-meta.no-transform .button,
