Add offcanvas layout for sidebar

--- a/assets/css/sass/woocommerce/shop-page.scss
+++ b/assets/css/sass/woocommerce/shop-page.scss
@@ -264,8 +264,8 @@
 	}
 }
 
-@media ( min-width: 991px ) {
+/*@media ( min-width: 991px ) {
 	.woostify-sorting #toggle-sidebar-mobile-button.show {
 		display: none;
 	}
-}
+}*/
