--- a/assets/css/sass/woocommerce/woocommerce.scss
+++ b/assets/css/sass/woocommerce/woocommerce.scss
@@ -131,6 +131,54 @@ $size: 40px;
 	}
 }
 
+.has-sidebar {
+	&.offcanvas-sidebar {
+		#toggle-sidebar-mobile-button {
+			display: block;
+		}
+
+		.shop-widget {
+			margin-top: 0 $i;
+			position: fixed;
+			left: 0;
+			bottom: 0;
+			top: 0;
+			width: 100%;
+			background-color: #fff;
+			padding: 15px;
+			max-width: 280px;
+			z-index: 200;
+			overflow-y: auto;
+			opacity: 0;
+			visibility: hidden;
+			@include translatex(-100%);
+			@include duration(0.2s);
+
+			&.active {
+				opacity: 1;
+				visibility: visible;
+				@include translatex(0);
+			}
+		}
+		&.logged-in.admin-bar {
+			.shop-widget {
+				top: 46px;
+
+				@media (min-width: 783px) {
+					top: 32px;
+				}
+			}
+		}
+	}
+	&:not(.offcanvas-sidebar) {
+		#toggle-sidebar-mobile-button.show {
+			@media (min-width: 991px) {
+				display: none;
+			}
+		}
+	}
+}
+
 @media (max-width: $screen-md - 1) {
 	.shop-widget {
 		margin-top: 0 $i;
