--- a/assets/css/sass/woocommerce/woocommerce.scss
+++ b/assets/css/sass/woocommerce/woocommerce.scss
@@ -266,7 +266,7 @@ $size: 40px;
 	@include flex(flex, space-between, center);
 	flex-wrap: wrap;
 
-	@media (max-width: $screen-sm - 1) {
+	@media (max-width: 480px) {
 		justify-content: center;
 		flex-direction: column;
 	}
@@ -307,8 +307,26 @@ $size: 40px;
 		-webkit-appearance: none;
 	}
 
-	.woocommerce-result-count {
+	.woostify-toolbar-left {
 		margin-bottom: 40px;
+		display: flex;
+		align-items: center;
+
+		@media (max-width: 480px) {
+			margin-bottom: 15px;
+		}
+
+		#toggle-sidebar-mobile-button {
+			margin: 0 10px 0 0;
+
+			@media (max-width: 480px) {
+				margin: 0;
+			}
+		}
+	}
+
+	.woocommerce-result-count {
+		margin-bottom: 0;
 
 		@media (max-width: $screen-sm - 1) {
 			display: none;
