remove non-ASCII Characters

--- a/assets/css/sass/base/layout/widgets.scss
+++ b/assets/css/sass/base/layout/widgets.scss
@@ -543,7 +543,7 @@
 	.chosen {
 		a {
 			&:before {
-				content: '×';
+				content: 'x';
 				color: #e2401c;
 				margin-right: 7px;
 				font-size: 1.2em;
