--- a/assets/css/sass/base/layout/general.scss
+++ b/assets/css/sass/base/layout/general.scss
@@ -167,6 +167,8 @@
 	display: -ms-inline-flexbox;
 	align-self: center;
 	-webkit-align-self: center;
+	-webkit-transition-duration: 0.3s;
+	transition-duration: 0.3s;
 	svg {
 		display: block;
 		width: 14px;
