Fix event changestop of Color Picker not working correctly when mouse drag into customizer's preview

--- a/inc/customizer/custom-controls/color-group/css/color-group.css
+++ b/inc/customizer/custom-controls/color-group/css/color-group.css
@@ -246,3 +246,6 @@
 .pcr-app .pcr-swatches > button {
 	overflow: unset;
 }
+.color-updating-class-name #customize-preview{
+	pointer-events: none;
+}
