--- a/assets/css/sass/base/layout/widgets.scss
+++ b/assets/css/sass/base/layout/widgets.scss
@@ -327,10 +327,16 @@
 			margin-left: 10px;
 
 			li:before {
-				content: "\e649";
-				font-family: $icon;
-				font-size: 10px;
-				margin-right: 5px;
+				margin-right: 8px;
+				margin-bottom: 1px;
+				content: "";
+				border-width: 1px 1px 0 0;
+				border-style: solid;
+				display: inline-block;
+				width: 6px;
+				height: 6px;
+				-webkit-transform: rotate(45deg);
+				transform: rotate(45deg);
 			}
 		}
 	}
