--- a/assets/css/sass/base/layout/dialog-search.scss
+++ b/assets/css/sass/base/layout/dialog-search.scss
@@ -101,6 +101,9 @@
 		&:after{
 			height: 100%;
 		}
+		.search-form-icon {
+			height: 100%;
+		}
 		.search-field {
 			border-radius: 0;
 			visibility: visible;
