Update some CSS

--- a/assets/css/sass/base/layout/header.scss
+++ b/assets/css/sass/base/layout/header.scss
@@ -170,6 +170,7 @@
 	position: relative;
 
 	.my-account-icon {
+		padding: 8px 0 10px;
 		font-size: 24px;
 		display: inline-flex;
 		display: -webkit-inline-flex;
