Change svg icon in WC account page

--- a/assets/css/sass/base/layout/general.scss
+++ b/assets/css/sass/base/layout/general.scss
@@ -166,6 +166,7 @@
 	display: -webkit-inline-flex;
 	display: -ms-inline-flexbox;
 	align-self: center;
+	color: currentColor;
 	svg {
 		display: block;
 		width: 14px;
