--- a/assets/css/sass/woocommerce/account-page.scss
+++ b/assets/css/sass/woocommerce/account-page.scss
@@ -119,7 +119,16 @@
             }
         }
 
-        &--dashboard{
+	    .woostify-svg-icon {
+		    color: currentColor;
+		    margin-right: 15px;
+		    svg {
+			    height: 20px;
+			    width: 20px;
+		    }
+	    }
+
+        /*&--dashboard{
 	        a:before{
 	            content: "\e6aa";
 	        }
@@ -183,7 +192,7 @@
 	    	a:before{
 	            content: "\e66f";
 	        }
-	    }
+	    }*/
 
         a{
             font-size: 15px;
